--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="css/style.css">
 <meta charset="utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>Module 2 solution</title>
+<title>Mod 2 Coursera</title>
 </head>
 <body>
 <h1>Auto Services</h1>
