--- a/Index.html
+++ b/Index.html
@@ -1,34 +1,144 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="css/style.css">
-<meta charset="utf-8">
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>Mod 2 Coursera</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lucky Shrub</title>
+  <meta name="Lucky Shrub" content="Garden Products">
+  <meta name="author" content="Garden Product">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link rel="stylesheet" href="https://fonts.gstatic.cm"> 
+  <link href="https://fonts.googleapis.com/css2?family=Markasi+Text">
 </head>
-<body>
-<h1>Auto Services</h1>
-<div class='row'>
-	<div class='col-lg-4 col-md-6'>
-		<div class='section', title="region 1">
-			<span id='oil'>Oil Change</span>
-		
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. </p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-6'>
-		<div class='section', title="region 2">
-			<span id='tire'>Tire Rotation</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font , typography, and page layout without being distracted by the content.</p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-12'>
-		<div class='section', title="region 3">
-			<span id='tuneUp'>Tune-Up</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. </p>
-		</div>
-	</div>
-</div>
+<header>
+  <div class="container">
+    <img src="./images/Asset 2@3x.png" width= "122" height="200px" alt="leaf"><span id="shop_info">
+      <h2>&nbsp;&nbsp;Design & Supplies for gardens</h2> <P>Lucky Shrub<br>2323 Main st.<br> Tucson Az 029837<br>Tel 555-555-5555<br></P></span>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    <img id="logo3" src="./images/Asset 3@3x.png" width= "122" height="200px" alt="leaf3">
+   </div>
+</header>
 
+<body>
+  <nav>
+  <ul>
+    <li><a href= "index.html">Home</a></li>
+    <li><a href= "#landscaping">Landscaping</a></li>
+    <li><a href="#plants">Our Plants </a></li>
+    <li><a href="#patio">Patio </a></li>
+    <li><a href="#about">About Us </a></li>
+  </ul>
+</nav>
+<main>
+  <div class="promocode">
+     <h3>25% OFF THIS WEEKEND <br>Come and visit our Beautiful Gardens</h3>
+      <p>Our garden shop and nursery have everything to make your garden as beautiful as ours.
+      Our design team is ready to help you <br>with your garden or landscape neeeds.
+    We currently are offering a 20% of your first purchase and 25% of a new design.</p>
+    </div>
+
+<div class='row'>
+  <div class='col-lg-4 col-md-6'>    
+    <section>
+      <article>
+        <h2 id="plants">Small Plants</h2>
+        <img src="./images/plants_1.JPG"  height="300" width="300" alt="plants_1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas facilis laudantium ipsa animi officiis iusto alias, incidunt amet, neque possimus quibusdam aliquam perspiciatis, hic velit dolor excepturi nisi. Repellendus, enim.
+       </p>
+      </article>
+      <article>
+      <h2>Medium Plants</h2>
+      <img src="./images/plants_4.JPG"  height="300" width="300" alt="plants_2">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem 
+      </p>
+    </article>
+    <article>
+      <h2>Large plants</h2>
+      <img src="./images/plants_3.JPG"  height="300" width="300" alt="plants_3">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem illum beatae doloremque accusamus libero? Non nesciunt qui modi itaque, illum culpa deleniti ullam?
+      </p>
+    </article>
+    </section>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='col-lg-4 col-md-6'>
+    <section>
+      <article>
+      <h2 id="patio">Patio</h2>
+      <img src="./images/patio.jpg"  height="300" width="300" alt="patio">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas facilis laudantium ipsa animi officiis iusto alias, incidunt amet, neque possimus quibusdam aliquam perspiciatis, hic velit dolor excepturi nisi. Repellendus, enim.
+      </p>
+    </article>
+    <article>
+      <h2>Patio 2</h2>
+      <img src="./images/patio_02.jpg"  height="300" width="300" alt="patio_2">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem illum beatae doloremque accusamus libero? Non nesciunt qui modi itaque, illum culpa deleniti ullam?
+      </p>
+    </article>
+    <article>
+      <h2>patio 3</h2>
+      <img src="./images/patio_03.jpg"  height="300" width="300" alt="patio_3">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem illum beatae doloremque accusamus libero? Non nesciunt qui modi itaque, illum culpa deleniti ullam?
+      </p>
+    </article>
+    </section>
+      </div>
+    </div>
+    
+    <div class='row'>
+      <div class='col-lg-4 col-md-6'>
+    <section>
+    <article>
+        <h2 id="landscaping">Landscape</h2>
+        <img src="./images/landscape.jpg"  height="300" width="300" alt="landscape">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas facilis laudantium ipsa animi officiis iusto alias, incidunt amet, neque possimus quibusdam aliquam perspiciatis, hic velit dolor excepturi nisi. Repellendus, enim.
+       </p>
+      </article>
+      <article>
+        <h2>Landscape 2</h2>
+        <img src="./images/landscape02.jpg"  height="300" width="300" alt="landscape02">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem illum beatae doloremque accusamus libero? Non nesciunt qui modi itaque, illum culpa deleniti ullam?
+        </p>
+      </article>
+      <article>
+        <h2>Landscape 3</h2>
+        <img src="./images/landscape03.jpg"  height="300" width="300" alt="landscape03">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non voluptatem, at perspiciatis optio, delectus autem illum beatae doloremque accusamus libero? Non nesciunt qui modi itaque, illum culpa deleniti ullam?
+        </p>
+      </article>
+      </section>
+      </div>
+    </div>
+
+  <div class="push"><a href= "index.html">Back Home</a>
+      </div>
+</main>
+<footer id="footer">
+  <div>
+    <img src="./images/Asset 1@3x.png" height="200px" width="100px" alt="logo">
+    </div>
+    <div id="about">ABOUT US &nbsp;&nbsp;&nbsp;<a href = "mailto:garden@luckyshrub.com?subject = Feedback&body = Message">
+      Send Feedback
+      <img src="./images/couple_in_garden.jpg" height="200" width="300px" alt="owners">
+    </div>
+    <p class="couple"> Lucky Shrub was started<br>by a husband and wife team,<br>who share a long time love for plants.<br>Jason is the garden architect,<br>
+         Maria manages all the marketing<br> for the company<br>and oversees the nursery</p>
+         <div class="copyright">
+          <a>&nbsp;</a> 
+       <p>Copyright Lucky Shrub 2022</p>
+    </div>
+</footer>
 </body>
 </html>
